// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["referentialIntegrity"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider             = "mysql"
  url                  = env("DATABASE_URL")
  referentialIntegrity = "prisma"
}

model Plan {
  id           String         @id @default(cuid())
  title        String
  description  String?
  price        Int            @default(1000)
  CustomerPlan CustomerPlan[]

  @@map("plans")
}

model CustomerPlan {
  id         String   @id @default(cuid())
  startDate  DateTime @map("start_date")
  endDate    DateTime @map("end_date")
  age        Int      @default(18)
  isActive   Boolean  @default(true) @map("is_active")
  totalPrice Int      @default(0) @map("total_price")
  customer   User?    @relation(fields: [customerId], references: [id])
  customerId String?

  plan   Plan?   @relation(fields: [planId], references: [id])
  planId String?

  @@index([customerId, planId])
  @@map("customerplans")
}

model Account {
  id                 String  @id @default(cuid())
  userId             String  @map("user_id")
  type               String
  provider           String
  providerAccountId  String  @map("provider_account_id")
  refresh_token      String?
  access_token       String?
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?
  session_state      String?
  oauth_token_secret String?
  oauth_token        String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id")
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String?   @unique
  age           Int?
  emailVerified DateTime? @map("email_verified")
  image         String?
  createdAt     DateTime  @default(now()) @map(name: "created_at")
  updatedAt     DateTime  @updatedAt @map(name: "updated_at")

  accounts     Account[]
  sessions     Session[]
  CustomerPlan CustomerPlan[]

  @@map(name: "users")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("verificationtokens")
}
